--- a/src/styles/progress.scss
+++ b/src/styles/progress.scss
@@ -7,6 +7,7 @@ $background: #575757;
   left: 0;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .ProgressContainer > div {
